swagger comments debugged
